--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-BASEDIR_DELAY=C:\Users\JavierSassen\OneDrive - Ponthus\Documenten\Ylka\Ylka_data_uni\delay_SUPERLTI
-BASEDIR_NODELAY=C:\Users\JavierSassen\OneDrive - Ponthus\Documenten\Ylka\Ylka_data_uni\no_delay_LTI
-CSV_STOREDIR=C:\\work\\ylka
+BASEDIR_DELAY=/Users/ylka/Library/Mobile Documents/com~apple~CloudDocs/uni_work/raw_data_superlti/DATA_superlti
+BASEDIR_NODELAY=/Users/ylka/Library/Mobile Documents/com~apple~CloudDocs/uni_work/raw_data_lange/DATA
+CSV_STOREDIR=/Users/ylka/Library/Mobile Documents/com~apple~CloudDocs/uni_work
